# AdventOfCode

./: .gitignore  13.py  14.py  README.md  algs.py  get_day.py  graph_utils.py  grid_utils.py  pyproject.toml  template.py  util.py
2020/: sols.ua
2022/: 13.py  14.py  15.py
2022/13/: main.py  problem.md
2022/14/: main.py  problem.md
2022/15/: main.py  problem.md
2022/16/: main.py  problem.md
2022/17/: main.py  problem.md
2022/18/: main.py  problem.md
2023/01/: main.py  problem.md
2023/02/: main.py  problem.md
2023/03/: main.py  problem.md
2023/04/: main.py  problem.md
2023/05/: main.py  problem.md
2023/06/: main.py  problem.md
2023/07/: main.py  problem.md
2023/08/: main.py  problem.md
2023/09/: main.py  problem.md
2023/1/: main.py  problem.md
2023/10/: main.py  problem.md
2023/11/: main.py  problem.md
2023/12/: main.py  problem.md
2023/13/: main.py  problem.md
2023/14/: main.py  problem.md
2023/15/: main.py  problem.md
2023/16/: main.py  problem.md
2023/18/: main.py  problem.md
2023/19/: main.py  problem.md
2023/20/: problem.md
2023/21/: main.py  part2.py  problem.md
2023/22/: problem.md
2023/23/: main.py  problem.md
2023/24/: problem.md
2023/25/: problem.md
2024/01/: main.py  problem.md
2024/02/: main.py  problem.md
2024/03/: main.py  problem.md
2024/04/: main.py  problem.md
2024/05/: main.py  problem.md
2024/06/: main.py  problem.md
2024/07/: main.py  problem.md
2024/08/: main.py  problem.md
2024/09/: main.py  problem.md
2024/10/: main.py  problem.md
2024/11/: main.py  problem.md
(+24 files in other folders)
